# Velocity

./: .gitignore  LICENSE  Makefile  README.md  bridging-header.h  build.sh
Velocity/: main.swift
Velocity.xcodeproj/: project.pbxproj
libvelocity/: Cargo.toml  build.rs
libvelocity/.sqlx/: query-090c9fc5568020c1f1a16102f3d5c3162c85d85b5c128d8cfa08b756dde5b238.json  query-23edd35f252dc0d1041b2bcdb9f0d52db19157a1d6011fd590a9fee01d594dad.json  query-2e5432d48bcf4a8cb0666e984b216923e145c6d13fa460837ae737a9472ee0cf.json  query-61e3c71e7e90c48562eb2433bde7eff66948f8b8a53f8d2bf0b4fab7044913bb.json  query-6c23c55d2ca67a8a6e00da4a8b4c8dc96bc844a50d350fb4587ea019d820bf55.json  query-719d383396a8ce019e1f0cf95cfe541fbdf1f7b77faad0d5784f2ae39e463509.json  query-83960ca7e7800b51b6156d99ddf5564c2e7a37cd2fa69081033af62505fbaee1.json  query-a8e1678879f759a684a903cad2678c8e4b710d0f749770e8de5787ab61454c9a.json  query-c6f4b089420d5be0be6e0a4e3eee58fedec9e23582567c2866402c3be39b97f8.json  query-c91f45ac9ae3930bac76e4b60260cf1c5df9667f01c0c897be60961504147382.json  query-d1a2958052a7e4b6a86d798fbcc4b28a4e680f96d1b7af33eff1b78e6aae7a3f.json  query-d6b06b7b25a79e0dc57da79963db7ecbf128f2fa22d6805cd72fee3bf920bf0d.json
libvelocity/libvelocity.xcodeproj/: project.pbxproj
libvelocity/migrations/: 00_users.sql  00_velocity.sql
libvelocity/src/: api.rs  error.rs  lib.rs  main.rs  model.rs
libvelocity/src/api/: u.rs
libvelocity/src/api/u/: auth.rs
libvelocity/src/error/: error_type.rs
libvelocity/src/model/: authkey.rs  authmanager.rs  group.rs  permission.rs  user.rs
(+112 files in other folders)
