[package]
name = "libvelocity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[[bin]]
name = "velocity"
path = "src/main.rs"

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
axum = { version = "0.7" }
log = "0.4.21"
pretty_env_logger = "0.5.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
swift-bridge = "0.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
